add "plugins/" to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,7 @@ wp-content/cache/
 wp-content/upgrade/
 wp-content/uploads/
 wp-content/wp-cache-config.php
+
+# Wordpress-related files added by kaidez
+# ---------------------------------------
+plugins/
