--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "gulp-watch": "^4.1.1"
   },
   "dependencies": {
+    "grunt-exec": "^0.4.6",
+    "grunt-uncss": "^0.4.1",
     "pageres": "^1.2.1"
   }
 }
